# TrafficCamWatcher

./: .gitignore  CMakeLists.txt  README.md  build.sh  cam_stream.cpp  cam_stream_copy.cpp  cameras.json  main.cpp  notes.txt
app/: CMakeLists.txt
app/camera_instance/: CMakeLists.txt  main.cpp
app/camera_point_utility/: CMakeLists.txt  main.cpp
app/camera_server/: CMakeLists.txt  main.cpp
app/image_processing/: CMakeLists.txt  main.cpp
cmake/: MyBoost.cmake  MyCppZmq.cmake  MyOpencv.cmake  MyWs.cmake  MyZmq.cmake
data_forwarder/: CMakeLists.txt  data_forwarder.cpp  data_forwarder.h
data_handler/: CMakeLists.txt  data_handler.cpp  data_handler.h
graphing/: index.html  requirements.txt  sample_driver.py  script.js
src/: CMakeLists.txt
src/camera/: CMakeLists.txt  base_camera.h  camera.cpp  camera.h
src/image_processing/: CMakeLists.txt  image_processing.cpp  image_processing.h  tracking_base.cpp  tracking_base.h  tracking_utils.h
src/image_processing/nms_multi_tracker/: nms_multi_tracker.cpp  nms_multi_tracker.h
src/image_processing/non_max_suppression/: README.md  non_maximum_suppression.cpp  non_maximum_suppression.h
src/image_processing/tracking_implementations/: README.md  image_processing.cpp  image_processing.h
src/server/: CMakeLists.txt  camera_server.cpp  camera_server.h
src/video_stream/: CMakeLists.txt  camera.h  video_stream.cpp  video_stream.h
